# metadata-agent-api

./: .dockerignore  .env.template  .gitignore  .vercelignore  DEPLOYMENT.md  Dockerfile  INSTALL.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_screenshot_upload.py  vercel.json
.github/workflows/: docker-publish.yml
scripts/: deploy-widget.ps1
src/: config.py  main.py
src/models/: schemas.py
src/schemata/: context-registry.json
src/schemata/default/: manifest.json
src/schemata/default/v1.8.0/: core.json  course.json  event.json
src/schemata/default/v1.8.1/: core.json  education_offer.json  education_program.json  occupation.json  organization.json  prompt.json  tool_service.json
src/schemata/default/v1.8.1 - Kopie/: core.json  course.json  curriculum.json  didactic_planning_tools.json  education_offer.json  event.json  learning_material.json  person.json  source.json
src/schemata/default/v2.0.0/: core.json  didactic_planning_tools.json  education_offer.json  event.json  learning_material.json  occupation.json  organization.json  person.json  tool_service.json
src/schemata/mds_oeh/: manifest.json
src/schemata/mds_oeh/v1.8.0/: core.json  curriculum.json  education_program.json
src/schemata/mds_oeh/v1.8.1/: core.json  course.json  curriculum.json  (+7 more)
src/schemata/redesign_26/: manifest.json
src/services/: field_normalizer.py  geocoding_service.py  input_source_service.py  llm_service.py  metadata_service.py  output_normalizer.py  repository_service.py  screenshot_service.py
src/utils/: schema_loader.py  text_utils.py
(+24 files in other folders)
